# littermap-aws-backend

./: .gitignore  .jshintrc  AUTHORS.md  CONTRIBUTING.md  README.md  config-example  init-config  manage  prepare  stack.yml  template.yml
.config-templates/: samconfig.toml
build-environments/cpp/: Dockerfile
functions/: Makefile
functions/add-location/: index.js  package.json
functions/auth/: index.js
functions/cloudfront-geolocation/: index.js
functions/daniel/: index.js
functions/db-init/: index.js  package.json
functions/db-run/: index.js  package.json
functions/get-location/: index.js  package.json
functions/get-scaled-image/: build.sh
functions/get-scaled-image/src/: CMakeLists.txt  main.cpp
functions/get-upload-link/: index.js
functions/info/: index.js
functions/log-event/: index.js  package.json
functions/login/: index.js
functions/scale-image/: build.sh
functions/scale-image-experimental/: build.sh
functions/scale-image-experimental/src/: CMakeLists.txt  main.cpp
functions/scale-image/src/: CMakeLists.txt  env.cpp  env.h  handler.cpp  handler.h  main.cpp
lambdas/: manage
lambdas/add_location/: index.js  package.json
lambdas/db_init/: index.js  package.json
lambdas/db_run/: index.js  package.json
lambdas/get_location/: package.json
lambdas/spot/: index.js  manage  package.json
lambdas/spot/role-policies/: gateway-permission-policy.json  lambda-permission-policy.json
layers/common/: Makefile
layers/common/nodejs/: package.json
lib/common/: Makefile
lib/common/nodejs/: package.json
lib/postgres/: Makefile
(+21 files in other folders)
